// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectOverviewForm Fields Defines form fields Project form reducer should handle GET_PROJECT_DETAIL_ERROR with and return initialState 1`] = `
Object {
  "error": Object {
    "success": false,
  },
  "event": 3,
  "form": Object {
    "authorizedBy": "",
    "authorizedByHop": "",
    "authorizedBySecond": "",
    "authorizedByThird": "",
    "budget": 1,
    "cdmNotifiable": false,
    "commenceDate": "date",
    "comments": "",
    "completionDate": "date",
    "creditCheckResult": "",
    "enquiryReceivedFrom": "",
    "enquiryTypeId": 1,
    "finalAccountDate": "date",
    "firstValuationDate": "date",
    "formOfContract": "",
    "insurance": "",
    "isProjectLive": false,
    "liquidatedDamages": "",
    "mainContractor": "",
    "milestones": "",
    "paymentTerms": "",
    "projectAddDetailId": "",
    "projectId": "",
    "retention": "",
    "siteAddress": "",
    "valuationIntervals": "",
    "workTypeId": -1,
  },
  "loading": false,
  "notify": 2,
}
`;

exports[`ProjectOverviewForm Fields Defines form fields Project form reducer should handle add project overview successfully 1`] = `
Object {
  "error": null,
  "event": undefined,
  "form": Object {
    "authorizedBy": "",
    "authorizedByHop": "",
    "authorizedBySecond": "",
    "authorizedByThird": "",
    "budget": 1,
    "cdmNotifiable": false,
    "commenceDate": "date",
    "comments": "",
    "completionDate": "date",
    "creditCheckResult": "",
    "enquiryReceivedFrom": "",
    "enquiryTypeId": 1,
    "finalAccountDate": "date",
    "firstValuationDate": "date",
    "formOfContract": "",
    "insurance": "",
    "isProjectLive": false,
    "liquidatedDamages": "",
    "mainContractor": "",
    "milestones": "",
    "paymentTerms": "",
    "projectAddDetailId": "",
    "projectId": "",
    "retention": "",
    "siteAddress": "",
    "valuationIntervals": "",
    "workTypeId": -1,
  },
  "loading": false,
  "notify": 1,
}
`;

exports[`ProjectOverviewForm Fields Defines form fields Project form reducer should handle edit project overview successfully 1`] = `
Object {
  "error": null,
  "event": undefined,
  "form": Object {
    "authorizedBy": "",
    "authorizedByHop": "",
    "authorizedBySecond": "",
    "authorizedByThird": "",
    "budget": 1,
    "cdmNotifiable": false,
    "commenceDate": "date",
    "comments": "",
    "completionDate": "date",
    "creditCheckResult": "",
    "enquiryReceivedFrom": "",
    "enquiryTypeId": 1,
    "finalAccountDate": "date",
    "firstValuationDate": "date",
    "formOfContract": "",
    "insurance": "",
    "isProjectLive": false,
    "liquidatedDamages": "",
    "mainContractor": "",
    "milestones": "",
    "paymentTerms": "",
    "projectAddDetailId": "",
    "projectId": "",
    "retention": "",
    "siteAddress": "",
    "valuationIntervals": "",
    "workTypeId": -1,
  },
  "loading": false,
  "notify": 1,
}
`;

exports[`ProjectOverviewForm Fields Defines form fields Project form reducer should handle get get additional details successfully 1`] = `
Object {
  "error": null,
  "event": 3,
  "form": Object {
    "authorizedBy": "",
    "authorizedByHop": "",
    "authorizedBySecond": "",
    "authorizedByThird": "",
    "budget": 1,
    "cdmNotifiable": false,
    "commenceDate": "date",
    "comments": "",
    "completionDate": "date",
    "creditCheckResult": "",
    "enquiryReceivedFrom": "",
    "enquiryTypeId": 1,
    "finalAccountDate": "date",
    "firstValuationDate": "date",
    "formOfContract": "",
    "insurance": "",
    "isProjectLive": false,
    "liquidatedDamages": "",
    "mainContractor": "",
    "milestones": "",
    "paymentTerms": "",
    "projectAddDetailId": "",
    "projectId": "1",
    "retention": "",
    "siteAddress": "",
    "valuationIntervals": "",
    "workTypeId": -1,
  },
  "loading": false,
  "notify": 0,
}
`;
